prometheus/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/scrape: "true"
  name: prometheus
spec:
  ports:
    - name: prometheus
      protocol: TCP
      port: 9090
