prometheus/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  tls:
    - hosts:
      - "prometheus.k.oneill.net"
      secretName: "prometheus-tls"
  rules:
    - host: "prometheus.k.oneill.net"
      http:
        paths:
          - path: /
            backend:
              serviceName: prometheus
              servicePort: 9090
